force-app/main/default/objects/Follow_Up_Question__c/fields/Follow_Up_Text__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Text__c</fullName>
    <label>Follow-Up Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>