force-app/main/default/objects/Follow_Up_Question__c/fields/Follow_Up_YesNo__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_YesNo__c</fullName>
    <label>Follow-Up YesNo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>