force-app/main/default/objects/Follow_Up_Question__c/fields/Number_of_Answers_Given__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Answers_Given__c</fullName>
    <label>Number of Answers Given</label>
    <summaryForeignKey>Follow_Up_Question_Detail__c.Follow_Up_Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>