force-app/main/default/objects/Follow_Up_Question__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>License_Registration__c</referenceTo>
    <relationshipLabel>Follow-Up Questions (Registration)</relationshipLabel>
    <relationshipName>Follow_Up_Questions1</relationshipName>
    <type>Lookup</type>
</CustomField>