force-app/main/default/objects/Follow_Up_Question__c/fields/Registration_Questions__c.field-meta.xml
<CustomField>
    <fullName>Registration_Questions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Questions</label>
    <referenceTo>Registration_Question__c</referenceTo>
    <relationshipLabel>Follow-Up Questions</relationshipLabel>
    <relationshipName>Follow_Up_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>