force-app/main/default/objects/Follow_Up_Question__c/fields/Unanswered_Follow_Up_Questions__c.field-meta.xml
<CustomField>
    <fullName>Unanswered_Follow_Up_Questions__c</fullName>
    <label>Unanswered Follow Up Questions</label>
    <summarizedField>Follow_Up_Question_Detail__c.Number_of_Unanswered_Questions__c</summarizedField>
    <summaryForeignKey>Follow_Up_Question_Detail__c.Follow_Up_Question__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>