force-app/main/default/objects/Follow_Up_Question__c/recordTypes/Simple.recordType-meta.xml
<RecordType>
    <fullName>Simple</fullName>
    <active>true</active>
    <description>Allows simple, single answers.</description>
    <label>Simple</label>
</RecordType>